...
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/locationLabel"
            app:layout_constraintTop_toBottomOf="@id/descriptionValue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/closeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/ok"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent" />
...
